# Chi

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  vulnerability.md
src/: app.py  camel.py  config.ini  requirements.txt
src/chi/: __init__.py  app.py  camel.py  config.ini  dict.py  md4gtk.py  requirements.txt
